--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
+    "@angular/animations": "^13.2.7",
+    "@angular/cdk": "^13.2.6",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.2.6",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "ng-lazyload-image": "^9.1.2",
+    "ngx-toastr": "^14.2.2",
     "rxjs": "~7.5.0",
+    "swiper": "^8.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
